# plat-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
Application/: CMakeLists.txt  Main.cpp
Dto/: CMakeLists.txt  Image.h  Rect.h
Modules/: CMakeLists.txt  ImageTextRecognition.cpp  ImageTextRecognition.h  OptionPositionFinder.cpp  OptionPositionFinder.h
Services/: BitmapScanner.h  CMakeLists.txt
Sources/: CMakeLists.txt  StbImplementations.cpp
Sources/Application/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp
Sources/Application/Windows/: CMakeLists.txt  HotkeyStatusPanel.cpp  HotkeyStatusPanel.h  MainWindow.cpp  MainWindow.h  OptionsPanel.cpp  OptionsPanel.h  ScanResultPanel.cpp  ScanResultPanel.h  SearchResultPanel.cpp  SearchResultPanel.h
Sources/Dto/: CMakeLists.txt  OrderBestPrices.h  Rect.h  RelicFinderParams.h  RelicItem.h  RelicItemsDatabase.h  RelicScanResult.h  SearchResult.h
Sources/Models/: CMakeLists.txt  HttpHeader.cpp  HttpHeader.h  HttpHeadersCollection.cpp  HttpHeadersCollection.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Image.cpp  Image.h  ItemOrder.cpp  ItemOrder.h  RelicItem.cpp  RelicItem.h  RelicItemsDatabase.cpp  RelicItemsDatabase.h
Sources/Services/: BestPricesFinder.cpp  BestPricesFinder.h  BitmapScanner.cpp  BitmapScanner.h  CMakeLists.txt  HttpClient.cpp  HttpClient.h  ImageReader.cpp  ImageReader.h  ImageScanner.cpp  ImageScanner.h  ImageWriter.cpp  ImageWriter.h  ItemOrdersFilter.cpp  ItemOrdersFilter.h  ItemOrdersJsonParser.cpp  ItemOrdersJsonParser.h  RelicPartPositionsFinder.cpp  RelicPartPositionsFinder.h  RelicScanner.cpp  RelicScanner.h  ScreenshotTaker.cpp  ScreenshotTaker.h  WarframeMarketApi.cpp  WarframeMarketApi.h
Sources/Services/ImageProcessors/: CMakeLists.txt  GrayscaleProcessor.cpp  GrayscaleProcessor.h  IImageProcessor.h  KernelProcessor.h  SharpenProcessor.cpp  SharpenProcessor.h  UpscaleProcessor.cpp  UpscaleProcessor.h
Sources/Services/RelicDatabase/: CMakeLists.txt  RelicDatabaseCreator.cpp  RelicDatabaseCreator.h  RelicDatabaseJsonParser.cpp  RelicDatabaseJsonParser.h  RelicDatabasePrimeItemsFilter.cpp  RelicDatabasePrimeItemsFilter.h  RelicDatabaseReader.cpp  RelicDatabaseReader.h  RelicDatabaseSearcher.cpp  RelicDatabaseSearcher.h  RelicDatabaseWriter.cpp  RelicDatabaseWriter.h  RelicItemNameCleaner.cpp  RelicItemNameCleaner.h
cmake/: externals_options.cmake  superbuild.cmake
